# Pythagorean-Oscillator

./: Cargo.toml  commands.txt  memory.x
.cargo/: config.toml
src/: config.rs  consts.rs  lib.rs  main.rs  memory.rs  utils.rs
src/dsp/: cycle.rs  cycle_detector.rs  env_detector.rs  gate.rs  lpf.rs  mod.rs  window.rs  windowing.rs  zero.rs
src/engine/: analyzer.rs  mod.rs  prism.rs  reader.rs  tracker.rs  voice.rs
src/system/: cv.rs  memory.rs  mod.rs
wavegen/: filter.py
